<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="8dp"
    android:layout_marginEnd="4dp"
    android:layout_marginStart="4dp"
    app:cardElevation="1000dp"
    android:elevation="20dp"
    android:backgroundTint="@color/newColor"
    app:cardCornerRadius="20dp">
>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_listClientName"
            android:theme="@style/title3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_data_client_title"
            />

        <TextView
            android:id="@+id/tv_listClientAddress"
            android:theme="@style/title3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Client_address"
            />

        <TextView
            android:id="@+id/tv_ListClientAmountPlay"
            android:text="@string/app_data_client_amount_to_pay"
            android:theme="@style/title3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </LinearLayout>


</androidx.cardview.widget.CardView>



